[package]
name = "rust-liquid-dsp"
version = "0.1.0"
authors = ["Ramy"]
edition = "2018"

[features]
default = ["fft-override", "simd-override"]
# Enables verbose debug messages.
debug-messages = []
# Use portable C code for dotprod, etc. even if SIMD extensions are available.
simd-override = []
# Use internal FFT even if libfftw is available.
fft-override = []

[dependencies]
quick-error ="1.2.2"

[build-dependencies]
bindgen = "0.49.3"
cc = "1.0.37"
glob = "0.3.0"
serde = {version = "1.0", features=["derive"]}
toml = "0.5.1"