[package]
name = "rust-liquid-dsp"
version = "0.1.0"
authors = ["Ramy"]
edition = "2018"

[features]
default = ["fft-override", "filter"]
# Enables verbose debug messages. (Unimplemented)
debug-messages = []
# Use portable C code for dotprod even if SIMD extensions are available.
simd-override = []
# Use internal FFT even if libfftw is available.
fft-override = []
# Compiles the filter module.
filter = []

[dependencies]
more-asserts = "0.2.1"
quick-error ="1.2.2"

[build-dependencies]
bindgen = "0.49.2"
cc = "1.0.37"
glob = "0.3.0"
serde = {version = "1.0", features=["derive"]}
toml = "0.5.1"